# mesa

./: .gitignore  README.md  config.example.py  config.py  pyproject.toml  run.bat  run.sh
.github/workflows/: ci.yml
definitions/: _helpers.py  contacts.py  sales.py  sales_all.py
mesa/: __init__.py  __main__.py  config.py  ingest.py  loader.py  validator.py
tests/: conftest.py  test_ingest_csv.py  test_ingest_xlsx_concat.py  test_ingest_xlsx_per_tab.py  test_loader.py  test_main.py  test_validator.py
tests/fixtures/: contacts.csv  sales.xlsx
